3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

server/shop.c: handle "no money" case when player tries to exit shop.
---
Fix a crash with object handling by plugins.
 cfpython/cfpython_map.c: don't assume op exists after inserting in map.
 Ryo 2007-02-15

Make armour handling coherent between gods, monsters and such.
Cloaks and bracers are not armour. Merge from trunk.
 common/item.c utils.c: fix tests with macros.
 include/define.h: update macro, new IS_SHIELD.
 server/apply.c monster.c player.c: use macros.
Ryo 2007-02-15

Invalidate player's view if teleporting. Call update_ob_speed when changing speed.
 server/plugins.c
Ryo 2007-02-12

lib/smooth updated in conjunction with arch update (revision 5421).
Kevin Bulgrien 2007-02-11

Fix a few compiler warnings.  Most were just unused variables, but
some in server/c_object.c had returns without values.
Files: server/c_object.c server/monster.c server/player.c server/weather.c 
MSW 2007-02-08

Implement feature request #1652066: Python: get user's savebed location and x,y coords.
---
New properties for player:
 server/plugins.c
 include/plugin.h
---
Python properties:
 plugins/cfpython/include/cfpython_object_private.h
 plugins/cfpython/cfpython_object.c
Ryo 2007-02-06

plugins/cfpython/cfpython_object.c: Fix missing braces.
Alex Schultz 2007-02-03

lib/formulae: Fix formula for "low boots of steel".
Andreas Kirschbaum 2007-02-26

server/gods.c: Clean up follower_remove_given_items()
Alex Schultz 2007-01-10

server/gods.c: Apply patch #1627442 by Aaron Baugher, to fix bug #1551735. Works
  by using a key_value of "divine_giver_name" to objects that are given by a god.
Alex Schultz 2007-01-04
