@@ -710,6 +710,14 @@ static void load_settings(void)
 		LOG(llevError, "load_settings: unknown value for create_home_portals: %s\n", cp);
         }
 
+    } else if ( !strcasecmp( buf, "allow_denied_spells_writing" ) ) {
+            if (!strcasecmp(cp, "on") || !strcasecmp(cp, "true")) {
+                settings.allow_denied_spells_writing = TRUE;
+            } else if (!strcasecmp(cp, "off") || !strcasecmp(cp, "false")) {
+                settings.allow_denied_spells_writing = FALSE;
+            } else {
+                LOG(llevError, "load_settings: unknown value for allow_denied_spells_writing: %s\n", cp);
+        }
     } else {
 	    LOG(llevError,"Unknown value in settings file: %s\n", buf);
 	}
