@@ -17,6 +17,12 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+New server settings: allow_denied_spells_writing, for inscription.
+ common/init.c
+ include/global.h
+ server/init.c skills.c
+Ryo 2007-02-15
+
 server/shop.c: handle "no money" case when player tries to exit shop.
 ---
 Fix a crash with object handling by plugins.
